Call being made, db not being updated
