# server/openapi.yaml
@@ -26,7 +26,7 @@ paths:
                     checked:
                       type: boolean
                       example: false
-  /addtodo:
+  /todo/add:
     post:
       summary: Add a new todo
       requestBody:
@@ -53,7 +53,7 @@ paths:
                   task:
                     type: string
                     example: "Buy groceries"
-  /deletetodo:
+  /todo/delete:
     delete:
       summary: Delete a todo
       parameters:
@@ -66,16 +66,16 @@ paths:
       responses:
         '204':
           description: Todo deleted
-  /updatetodo:
+  /todo/update/{id}:
     put:
       summary: Update a todo
       parameters:
         - name: id
-          in: query
+          in: path
           required: true
           schema:
-            type: integer
-            example: 1
+            type: string
+            example: 675c831a85ac9204985b80c9
       requestBody:
         required: true
         content:
